<resources>
    <string name="app_name">Medical Internships</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="space"></string>
    <string name="first"><b>Для кого:</b></string>
    <string name="second"><b>Страна:</b></string>
    <string name="fird"><b>Город:</b></string>
    <string name="four"><b>Отделения / специальности:</b></string>
    <string name="five"><b>Когда:</b></string>
    <string name="six"><b>Сроки стажировки:</b></string>
    <string name="seven">Стажировка платная</string>
    <string name="about"><b>Для кого:</b> \n<b>Страна:</b> \n<b>Город:</b> \n<b>Отделения / специальности:</b> \n<b>Когда:</b> \n<b>Сроки стажировки:</b> \nСтажировка платная</string>
    <string name="title_activity_choose_country">ChooseCountry</string>
    <string name="title_activity_view_pager_adapter_austria">ChooseCountry</string>
    <string name="logo_desc">Выберите страну</string>
    <string name="logo_australia">Австралия</string>
    <string name="logo_usa">США</string>
    <string name="logo_austria">Австрия</string>
    <string name="logo_germany">Германия</string>
    <string name="logo_czech">Чешская Республика</string>
    <string name="logo_south_korea">Южная Корея</string>
    <string name="logo_israel">Израиль</string>
    <string name="logo_medeng">Медицинский английский</string>
    <string name="logo_geneng">Общий английский</string>
    <string name="logo_eltstoefl">Подготовка к IELTS и TOEFL</string>
    <string name="country_name">Russia</string>
    <string name="about_australia_sydney">"<b>Для кого:</b> студенты (6 курс)\n<b>Страна:</b> Австралия\n<b>Город:</b> Сидней\n<b>Отделения / специальности:</b>\n - Акушерство и гинекология\n - анестезиология\n - гастроинтестинальная хирургия\n - гастрология\n - гастроэнтерология\n - гематология\n - гериатрия\n - гипербарическая медицина\n - дерматология\n - иммунология\n - инфекционное отделение\n - кардиология\n - кардиоторакальная хирургия\n - колоректальная хирургия\n - неврология\n - нейрохирургия\n - нефрология\n - онкология\n - ортопедическая хирургия\n - отделение интенсивной терапии (реанимационное отделение)\n - отделение неотложной помощи\n - отделение паллиативной помощи\n - отделение по работе с пациентами с ВИЧ / СПИД\n - отделение ухода за людьми преклонного возраста\n - отделение хирургии верхних отделов гастроинтенстинального тракта\n - отделение хирургии нижних отделов гастроинтенстинального тракта\n - оториноларингология\n - офтальмология\n - педиатрия\n - пластическая хирургия\n - психиатрия\n - пульмонология\n - радиологическое отделение по лечению онкологических пациентов\n - радиология\n - реабилитационное отделение\n - сосудистая хирургия\n - травматологическое отделение\n - урология\n - хирургическая онкология\n - эндокринология\n<b>Когда:</b> круглогодично (за исключением декабря и января; точные даты и сроки возможной стажировки уточняются по запросу)\n<b>Сроки стажировки:</b> 4–8 недель (6–10 недель для травматологического отделения)\nСтажировка платная"</string>
    <string name="about_australia_adelaide">"<b>Для кого:</b> студенты (5 и 6 курс)\n<b>Страна:</b> Австралия\n<b>Город:</b> Аделаида\n<b>Отделения / специальности:</b>\n - Кардиология\n - микробиологическое отделение\n - нефрология\n - ортопедическая хирургия\n - отделение внутренней медицины\n - отделение гематологии / медицинской онкологии\n - отделение иммунологии / ревматологии\n - отделение неотложной помощи\n - отделение по контролю за инфекционными заболеваниями\n - отделение реабилитационной медицины\n - отделение тропических инфекционных заболеваний\n - оториноларингология\n - офтальмология\n - пластическая хирургия\n - психиатрия\n - пульмонология\n - реанимационное отделение\n - сосудистая хирургия\n - челюстно-лицевая хирургия\n<b>Когда:</b> круглогодично\n<b>Сроки стажировки:</b> 4–8 недель\nСтажировка платная"</string>
    <string name="about_australia_melbourne1">"<b>Для кого:</b> студенты (6 курс)\n<b>Страна:</b> Австралия\n<b>Город:</b> Мельбурн\n<b>Отделения / специальности:</b>\n - Анестезиология\n - гастроэнтерология\n - дерматология\n - инфекционное отделение\n - кардиология\n - неврология\n - нейрохирургия\n - онкология\n - ортопедическая хирургия\n - отделение интенсивной терапии (реанимационное отделение)\n - отделение неотложной помощи\n - оториноларингология\n - офтальмология\n - пластическая хирургия\n - психиатрия\n - пульмонология\n - радиология\n - сосудистая хирургия\n - травматологический пункт\n - урология\n - челюстно-лицевая хирургия\n - эндокринология\n<b>Когда:</b> круглогодично (за исключением периода с середины декабря и до середины января; точные даты и сроки возможной стажировки уточняются по запросу)\n<b>Сроки стажировки:</b> 2–8 недель\nСтажировка платная"</string>
    <string name="about_australia_melbourne2">"<b>Для кого:</b> студенты, ординаторы, врачи\n<b>Страна:</b> Австралия\n<b>Город:</b> Мельбурн\n<b>Отделения / специальности:</b>\n - Анестезиология\n - ожоговое отделение (пластическая хирургия)\n - ортопедическое отделение\n - радиология (отделение визуализации травматологической патологии)\n - реанимационное отделение\n - травматологический пункт (отделение неотложной помощи)\n<b>Когда:</b> круглогодично (точные даты и сроки возможной стажировки уточняются по запросу)\n<b>Сроки стажировки:</b> 2–6 недель\nСтажировка платная"</string>
    <string name="about_austria_graz">"<b>Для кого:</b> врачи\n<b>Страна:</b> Австрия\n<b>Город:</b> Грац\n<b>Отделения / специальности:</b>\n - Гастроэнтерология и гепатология\n - гематология\n - дерматовенерология\n - кардиология\n - кардиохирургия\n - медицинская психология и психиатрия\n - нейрохирургия\n - неонатология\n - общая детская хирургия\n - общая неврология\n - общая хирургия\n - онкология\n - отделение акушерства\n - отделение ангиологии (внутренние болезни)\n - отделение анестезиологии и реанимации сердечно-сосудистой хирургии\n - отделение анестезиологии и реанимации черепно-лицевой и нейрохирургии\n - отделение детской ортопедии\n - отделение детской радиологии\n - отделение нейрорадиологии\n - отделение нефрологии и гемодиализа\n - отделение общей анестезиологии и реанимации\n - отделение общей гинекологии\n - отделение общей оториноларингологии и хирургии структур головы и шеи\n - отделение общей педиатрии\n - отделение общей радиологической диагностики\n - отделение оральной и кранио-челюстно-лицевой хирургии\n - отделение ортодонтии и челюстно-лицевой ортопедии\n - отделение ортопедии и травматологии\n - отделение педиатрической гемато-онкологии\n - отделение педиатрической кардиологии\n - отделение профилактической и оперативной стоматологии (эндодонтии, педодонтии и минимально инвазивной стоматологии)\n - отделение радиологии ядерной медицины\n - отделение ревматологии и иммунологии\n - отделение респираторных и аллергических заболеваний детского возраста\n - отделение терапевтической радиологии и онкологии\n - отделение торакальной и гипербарической хирургии\n - отделение трансфузиологии\n - отделение фониатрии и речи\n - отделение эндокринологии и диабетологии\n - офтальмология\n - пластическая хирургия\n - психиатрическое отделение\n - пульмонология\n - сосудистая хирургия\n - трансплантология\n - урология\n<b>Когда:</b> круглогодично (точные даты и сроки возможной стажировки уточняются по запросу)\n<b>Сроки стажировки:</b> 2–8 недель\nСтажировка платная"</string>
    <string name="about_austria_graz1">"<b>Для кого:</b> студенты, ординаторы\n<b>Страна:</b> Австрия\n<b>Город:</b> Грац\n<b>Отделения / специальности:</b>\n - Гастроэнтерология и гепатология\n - гематология\n - дерматовенерология\n - кардиология\n - кардиохирургия\n - медицинская психология и психиатрия\n - нейрохирургия\n - неонатология\n - общая детская хирургия\n - общая неврология\n - общая хирургия\n - онкология\n - отделение акушерства\n - отделение ангиологии (внутренние болезни)\n - отделение анестезиологии и реанимации сердечно-сосудистой хирургии\n - отделение анестезиологии и реанимации черепно-лицевой и нейрохирургии\n - отделение детской ортопедии\n - отделение детской радиологии\n - отделение нейрорадиологии\n - отделение нефрологии и гемодиализа\n - отделение общей анестезиологии и реанимации\n - отделение общей гинекологии\n - отделение общей оториноларингологии и хирургии структур головы и шеи\n - отделение общей педиатрии\n - отделение общей радиологической диагностики\n - отделение оральной и кранио-челюстно-лицевой хирургии\n - отделение ортодонтии и челюстно-лицевой ортопедии\n - отделение ортопедии и травматологии\n - отделение педиатрической гемато-онкологии\n - отделение педиатрической кардиологии\n - отделение профилактической и оперативной стоматологии (эндодонтии, педодонтии и минимально инвазивной стоматологии)\n - отделение радиологии ядерной медицины\n - отделение ревматологии и иммунологии\n - отделение респираторных и аллергических заболеваний детского возраста\n - отделение терапевтической радиологии и онкологии\n - отделение торакальной и гипербарической хирургии\n - отделение трансфузиологии\n - отделение фониатрии и речи\n - отделение эндокринологии и диабетологии\n - офтальмология\n - пластическая хирургия\n - психиатрическое отделение\n - пульмонология\n - сосудистая хирургия\n - трансплантология\n - урология\n<b>Когда:</b> круглогодично (точные даты и сроки возможной стажировки уточняются по запросу)\n<b>Сроки стажировки:</b> 2–8 недель\nСтажировка платная"</string>
    <string name="about_us_1">"<b>Медицинские стажировки\n</b><b>Версия 1.1\n\n</b>Мобильное приложение "Медицинские стажировки" создано специально для студентов, ординаторов и врачей Российской Федерации и стран СНГ и объединяет множество возможностей для образовательных стажировок в различных странах мира. Чтобы получить подробную информацию о стажировках, свяжитесь с нами по электронной почте <b>medicalinternshipsksm@gmail.com</b> или используйте кнопки связи в приложении\n\nДанное приложение создано в сотрудничестве с Международным образовательным центром <b>"Доминанта"</b>!"\n</string>
    <string name="about_us_2">"Международный образовательный центр "Доминанта" консультирует по вопросам образования, включая языковые курсы, академический год, бакалавриат и магистратуру, а также стажировки, за рубежом, организует курсы иностранных языков в Саратове и Пензе, проводит различные мероприятия по продвижению этих направлений, принимает экзамены IELTS и TOEIC, а также оказывает сопутствующие услуги (визовая поддержка, страховка, бронирование гостиниц, авиабилеты и т.д.)"</string>
    <string name="email1">Электронная почта</string>
    <string name="share1">Поделиться с друзьями</string>
    <string name="skype1">Связаться в скайпе</string>
</resources>