<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tx_v1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_us_1"
                android:textColor="@color/ColorPrimary"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tx_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx_v1"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/about_us_2"
                android:textColor="@color/ColorPrimary"
                android:textSize="22sp" />

            <Button android:id="@+id/button1"
                android:gravity="center"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/text_white"
                android:background="@drawable/button_background"
                android:text="@string/email1"
                android:drawableRight="@drawable/camera"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tx_v2"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp" />

            <Button android:gravity="center"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/text_white"
                android:background="@drawable/button_background"
                android:text="@string/skype1"
                android:drawableRight="@drawable/location"
                android:layout_centerHorizontal="true"
                android:id="@+id/button3"
                android:layout_below="@+id/button2"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp" />

            <Button android:gravity="center"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/text_white"
                android:background="@drawable/button_background"
                android:text="@string/share1"
                android:drawableRight="@drawable/attachment"
                android:layout_centerHorizontal="true"
                android:id="@+id/button2"
                android:layout_below="@+id/button1"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tx_v3"
                android:layout_width="match_parent"
                android:layout_below="@+id/button3"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/space"
                android:textColor="@color/text_white"
                android:textSize="25sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>